--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -1,7 +1,7 @@
 /* PlantShare */
 
 $form-field-padding: 5px;
-$form-field-width: 357px;
+$form-field-width: 353px;
 $plantshare-main-column-width: 475px;
 $section-padding: 16px;
 $mini-input-font-size: 11px;
